--- a/src/dagster_demo/dbt/dbt_project.yml
+++ b/src/dagster_demo/dbt/dbt_project.yml
@@ -1,13 +1,13 @@
 config-version: 2
 
-name: "jaffle_shop"
+name: "dbt"
 version: "3.0.0"
 require-dbt-version: ">=1.5.0"
 
 dbt-cloud:
   project-id: 275557 # Put your project id here
 
-profile: default # Put your profile here
+profile: dev # Put your profile here
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
@@ -22,7 +22,7 @@ clean-targets:
   - "dbt_packages"
 
 vars:
-  "dbt_date:time_zone": "America/Los_Angeles"
+  "dbt_date:time_zone": "Asia/Saigon"
 
 seeds:
   jaffle_shop:
