--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,7 @@ requires-python = ">=3.9,<3.14"
 version = "0.1.0"
 dependencies = [
     "dagster==1.11.3",
-    "dagster-dbt",
-    "dagster-dlt",
+    "dagster-dbt>=0.27.3",
     "dbt-bigquery>=1.10.0",
 ]
 
