--- a/src/dagster_demo/dbt/dbt_project.yml
+++ b/src/dagster_demo/dbt/dbt_project.yml
@@ -5,7 +5,7 @@ version: "3.0.0"
 require-dbt-version: ">=1.5.0"
 
 
-profile: "demo" # Put your profile here
+profile: "demo"
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
@@ -21,12 +21,6 @@ clean-targets:
 
 vars:
   "dbt_date:time_zone": "Asia/Saigon"
-
-seeds:
-  dbt_demo:
-    jaffle-data:
-      +schema: JAFFLE_SHOP_RAW
-      +enabled: "{{ var('load_source_data', false) }}"
 
 models:
   dbt_demo:
