--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ version = "0.1.0"
 dependencies = [
     "dagster==1.11.3",
     "dagster-dbt>=0.27.3",
+    "dagster-dlt>=0.27.3",
+    "dagster-gcp>=0.27.3",
     "dbt-bigquery>=1.10.0",
 ]
 
