Build fct models

--- a/src/dagster_demo/dbt/dbt_project.yml
+++ b/src/dagster_demo/dbt/dbt_project.yml
@@ -39,4 +39,7 @@ models:
         materialized: table
         schema: JAFFLE_SHOP_SERVING
     marts:
-      +materialized: table
+      +database: "logical-light-467105-p7"
+      JAFFLE_SHOP_MART:
+        materialized: table
+        schema: JAFFLE_SHOP_MART
